--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,3 +1,10 @@
+body{
+    background-color: #f9f7f7;
+}
+.navbar{
+    background-color: #1F456E!important;
+    color: #dbe2ef;
+}
 a, a:hover {
     color: inherit;
     text-decoration: none; /* no underline */
@@ -19,9 +26,22 @@ a, a:hover {
 .card-categories{
     height: 3rem;
 }
-
+.card-img-top{
+    height: 20rem!important;
+}
 @media only screen and (min-width: 613px){
     .menu-view{
         max-width: 18rem!important;
     }
 }
+
+h1,h2,h3,h4{
+    font-family: 'Oxygen', Sans-Serif;
+}
+h5,h5,p{
+    Font-Family: 'Noto Serif', Serif;
+}
+p{
+    font-size: 16px;
+}
+
