Feat: Email Password recovery Add: Email to Utils Folder Add: SMTP to maven Add: Set Routes for password recovery
-
-
-

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -120,7 +120,7 @@ p{
     display: none;  /* Safari and Chrome */
 }
 
-/******* Modal -or- seperator **********/
+/******* Modal **********/
 .btn-login {
     color: #fff;
     background-color: #34b6ce;
@@ -138,7 +138,7 @@ p{
     top: -11px;
     z-index: 1;
 }
-/******* !Modal or seperator **********/
+/******* !Modal **********/
 
 
 
